--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -181,6 +181,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">friday 12/1/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">75 - 14 - 24 - 84 - 78</p>
+                <p class="machine">85 - 74 - 16 - 5 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">10 - 49 - 18 - 50 - 31</p>
+                <p class="machine">24 - 12 - 14 - 22 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game">Gold</h3>
+                <p class="winning">89 - 40 - 75 - 25 - 83</p>
+                <p class="machine">62 - 20 - 18 - 84 - 66</p>        
+            </article>
+            <article>
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">70 - 7 - 61 - 23 - 68</p>
+                <p class="machine">21 - 71 - 19 - 56 - 77</p>        
+            </article>
+            <article>
+                <h3 class="game">Bonanza</h3>
+                <p class="winning">49 - 36 - 24 - 6 - 71</p>
+                <p class="machine">73 - 79 - 19 - 8 - 56</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">61 - 54 - 3 - 84 - 8</p>
+                <p class="machine">42 - 85 - 38 - 87 - 43</p>        
+            </article>
+        </section>
+
+        <section aria-label="yesterday result">
             <h2 class="date">thursday 11/1/2024</h2>
         <article>
             <h3 class="game">People</h3>
@@ -214,41 +248,6 @@
         </article> 
         </section>
 
-        <section aria-label="Two days age result">
-            <h2 class="date">wednesday 10/1/2024</h2>
-            <article>
-                <h3 class="game">Tota</h3>
-                <p class="winning">46 - 10 - 40 - 72 - 19</p>
-                <p class="machine">90 - 11 - 85 - 86 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">mark ii</h3>
-                <p class="winning">60 - 39 - 47 - 82 - 1</p>
-                <p class="machine">53 - 44 - 69 - 11 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">28 - 90 - 30 - 70 - 14</p>
-                <p class="machine">82 - 85 - 45 - 18 - 75</p>        
-            </article>
-            <article>
-                <h3 class="game">Enugu</h3>
-                <p class="winning">64 - 60 - 2 - 46 - 75</p>
-                <p class="machine">40 - 44 - 36 - 63 - 52</p>        
-            </article>
-            <article>
-                <h3 class="game">Midweek</h3>
-                <p class="winning">40 - 87 - 49 - 15 - 42</p>
-                <p class="machine">50 - 47 - 53 - 46 - 65</p>        
-            </article>
-            <article>
-                <h3 class="game">Lucky</h3>
-                <p class="winning">40 - 51 - 69 - 25 - 38</p>
-                <p class="machine">73 - 60 - 56 - 81 - 48</p>        
-            </article>
-        </section>
-
-       
 
     </div>
     
