--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="stayConnected">
                     <span>Stay connected</span>
                     <a href="https://twitter.com/hologutiBcentre" target="_blank"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
-                    <a href="https://www.facebook.com/hologutiBusines" target="_blank"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
+                    <a href="https://www.facebook.com/visuaLottoBoard" target="_blank"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
                     <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
                     <a href="https://www.instagram.com/hologutibusines/" target="_blank"><i class="fa-brands fa-instagram"  aria-label="connect on Our instagram Page"></i></a>
                 </div>
