--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                 </div>
                 <button class="buy-lrCard">Buy LR Card</button>
             </div>
+
+                        <!-- all games-->
             <section>
                 <div class="iframe-container" id="iframeContainer">
                     <div class="frame" id="frame" tabindex="0"> 
@@ -164,26 +166,32 @@
                     </div>
                 </div>
             </section>
+
+                                    <!-- classification-->
             <aside class="classification-wrapper" id="dragClassification" draggable="true" >
                 <!-- <a href="classification.html" class="counterpart">Click to View in Main Page</a>  -->
                 <iframe title="numbers classification chart" src="classification.html" class="classification"  id="dis"></iframe>
             </aside> 
-            <aside  class="disclaimer">
-                <p><strong>Disclaimer</strong></p> 
-                <p class="disclaim-message"> Hologuti Business Centre <b>(HBC)</b>'s <i>Visual Lotto Board (VLB)</i> is created for entertainment purposes only. 
-               <b>HBC</b> is not connected to, or approved by any of the lottory organization, or any other body that related to any of the game used, 
-                and does not endorse any lottery or gambling game, and also does not encourage anyone to gamble.
-
-                The <i><b>VLB</b></i> is a digital representation of a lotto board. It does not guarantee any winnings in any lottery.
-                It is not intended for use by minors, should not be used as a replacement for seeking professional financial advice.
-                <br><br>
-                By using the VLB, <b>HBC</b> is not responsible for any losses or damages incurred as a result. You agree to release <b>HBC</b> from any and all liability.
-                <br></br>
-                <strong> Please, be responsible!!!</strong> 
-                </p>
-                <p class="respective-owner"><strong>copyright&copy; and trademark&trade; materials of external companies used here is for descriptive purpose only and belong to their respective owner</strong></p>
-            </aside>
         </main>
+
+                                 <!-- disclaimer-->
+        <aside  class="disclaimer">
+            <p><strong>Disclaimer</strong></p> 
+            <p class="disclaim-message"> Hologuti Business Centre <b>(HBC)</b>'s <i>Visual Lotto Board (VLB)</i> is created for entertainment purposes only. 
+            <b>HBC</b> is not connected to, or approved by any of the lottory organization, or any other body that related to any of the game used, 
+            and does not endorse any lottery or gambling game, and also does not encourage anyone to gamble.
+
+            The <i><b>VLB</b></i> is a digital representation of a lotto board. It does not guarantee any winnings in any lottery.
+            It is not intended for use by minors, should not be used as a replacement for seeking professional financial advice.
+            <br><br>
+            By using the VLB, <b>HBC</b> is not responsible for any losses or damages incurred as a result. You agree to release <b>HBC</b> from any and all liability.
+            <br></br>
+            <strong> Please, be responsible!!!</strong> 
+            </p>
+            <p class="respective-owner"><strong>copyright&copy; and trademark&trade; materials of external companies used here is for descriptive purpose only and belong to their respective owner</strong></p>
+        </aside>
+
+                        <!-- footer-->
         <footer>
             <small>Created & Manage <br> By <br> Hologuti Business Centre</small>
             <a href="https://hologutibusinesscentre.com" target="_blank"><img src="https://i.postimg.cc/x1YB05Sf/hbc-logo-180.png" aria-hidden="true"></a>
@@ -198,13 +206,14 @@
                 </div>
                 <div class="stayConnected">
                     <span>Stay connected</span>
-                    <a href="https://twitter.com/hologutiBcentre" target="_blank"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
+                    <a href="https://twitter.com/visuaLottoBoard" target="_blank"><i class="fa-brands fa-square-x-twitter"  aria-label="connect 0n our X Page "></i></a>
                     <a href="https://www.facebook.com/visuaLottoBoard" target="_blank"><i class="fa-brands fa-facebook"  aria-level="connect on our facebook Page"></i></a>
                     <a href="https://m.me/109930914660224" target="_blank"><i class="fa-brands fa-facebook-messenger"  aria-label="connect on Messenger handle to Chat Us"></i></a>
                     <a href="https://www.instagram.com/hologutibusines/" target="_blank"><i class="fa-brands fa-instagram"  aria-label="connect on Our instagram Page"></i></a>
                 </div>
             </div>
         </footer>
+
         <div class="goggleAd" aria-hidden="true" tabindex="-1">
             <script src="script.js"></script>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
