--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -181,6 +181,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">saturday 13/1/2024</h2>
+            <article>
+                <h3 class="game">Premier King</h3>
+                <p class="winning">51 - 36 - 43 - 41 - 24</p>
+                <p class="machine">33 - 4 - 58 - 14 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game">Super</h3>
+                <p class="winning">34 - 31 - 66 - 76 - 44</p>
+                <p class="machine">28 - 73 - 25 - 63 - 89</p>        
+            </article>
+            <article>
+                <h3 class="game">Club Master</h3>
+                <p class="winning">67 - 15 - 28 - 6 - 10</p>
+                <p class="machine">74 - 32 - 1 - 78 - 82</p>        
+            </article>
+            <article>
+                <h3 class="game">06</h3>
+                <p class="winning">26 - 21 - 77 - 22 - 51</p>
+                <p class="machine">2 - 75 - 5 - 20 - 64</p>        
+            </article>
+            <article>
+                <h3 class="game">National</h3>
+                <p class="winning">13 - 57 - 15 - 67 - 61</p>
+                <p class="machine">65 - 18 - 69 - 46 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">50 - 47 - 17 - 14 - 42</p>
+                <p class="machine">16 - 19 - 88 - 78 - 54</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago results">
             <h2 class="date">friday 12/1/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -214,39 +248,7 @@
             </article>
         </section>
 
-        <section aria-label="yesterday result">
-            <h2 class="date">thursday 11/1/2024</h2>
-        <article>
-            <h3 class="game">People</h3>
-            <p class="winning">72 - 35 - 31 - 86 - 84</p>
-            <p class="machine">74 - 34 - 63 - 61 - 16</p>        
-        </article>
-        <article>
-            <h3 class="game">Fair Chance</h3>
-            <p class="winning">49 - 3 - 27 - 75 - 35</p>
-            <p class="machine">79 - 87 - 25 - 7 - 42</p>        
-        </article>
-        <article>
-            <h3 class="game">Diamond</h3>
-            <p class="winning">68 - 21 - 6 - 14 - 78</p>
-            <p class="machine">79 - 36 - 57 - 18 - 34</p>        
-        </article>
-        <article>
-            <h3 class="game">International</h3>
-            <p class="winning">83 - 48 - 10 - 14 - 61</p>
-            <p class="machine">76 - 39 - 51 - 67 - 82</p>        
-        </article>
-        <article>
-            <h3 class="game">Fortune</h3>
-            <p class="winning">67 - 82 - 28 - 80 - 20</p>
-            <p class="machine">3 - 85 - 33 - 79 - 47</p>        
-        </article>
-        <article>
-            <h3 class="game">Bingo</h3>
-            <p class="winning">51 - 61 - 7 - 31 - 37</p>
-            <p class="machine">75 - 32 - 79 - 21 - 42</p>        
-        </article> 
-        </section>
+        
 
 
     </div>
