--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Visual Lotto Board | Baba Ijebu and Lotto result, yesterday and past results</title>
-        <meta name="description" content="Visual Lotto Board is a webpage that contains Past and Up-to-date results of Premier lotto, Baba Ijebu and Ghana games">
+        <meta name="description" content="Visual Lotto Board is a webpage for Past and Up-to-date Premier lotto, Baba Ijebu and Ghana games results">
+
+        <meta property="og:title" content="Visual Lotto Board">
+        <meta property="og:description" content="Digital board to check Premier Lotto Baba Ijebu result and game plans">
+        <meta property="og:image" content="https://i.postimg.cc/mgJRmrPV/mobile-2.png">
+        <meta property="og:imahe:alt" content="">
+        <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/">
 
         <!-- Meta Pixel Code -->
         <script>
