--- a/plan.html
+++ b/plan.html
@@ -195,7 +195,65 @@
         </nav>
     </header>
     <main>
-        <h1>Please Check Back Some Few Time</h1>
+        <h2>Welcome to Plan Page</h2>
+        <p>Let's quickly look at some game plans available on Premier Royal. Don't forget this game closes at 9:30am - Sunday 14/01/2024</p>
+        <p>We will look across Enugu, TOTA, Diamomd, Bonanza and on Royal itself.The best way to reference each game line is usin the `S/N`. Let's go!</p>
+
+        <section>
+            <h3>On Enugu</h3>
+            <article>
+                <p>at the LINE "S/N 22", along the line it played 75-78-5</p>
+                <a href="/GAMES/3Enugu.html">
+                    <img src="https://i.postimg.cc/kGZF15HN/Screenshot-2024-01-14-050704.png">
+                </a>
+                <small>click on the image to take you directly to the board</small>
+            </article>
+        </section>
+
+        <section>
+            <h3>On TOTA</h3>
+            <article>
+                <p>at the LINE "S/N 8", along the line it played 14 24</p>
+                <a href="/GAMES/5Tota.html">
+                    <img src="https://i.postimg.cc/90xy4fV5/Screenshot-2024-01-14-050726.png">
+                </a>
+                <small>click on the image to take you directly to the board</small>
+            </article>
+        </section>
+
+        <section>
+            <h3>On Diamond</h3>
+            <article>
+                <p>at the LINE "S/N T", along first played 9 in the machine<br>
+                    at S/N "U" it played 14 78</p>
+                    <a href="/GAMES/6Diamond.html">
+                        <img src="https://i.postimg.cc/Tww1HJgm/Screenshot-2024-01-14-050752.png">
+                    </a>
+                <small>click on the image to take you directly to the board</small>
+            </article>
+        </section>
+
+        <section>
+            <h3>On Bonanza</h3>
+            <article>
+                <p>at the LINE "S/N 17", you see 75- 14</p>
+                <a href="/GAMES/23Bonanza.html">
+                    <img src="https://i.postimg.cc/3NqK6MYQ/Screenshot-2024-01-14-050840.png">
+                </a>
+            <small>click on the image to take you directly to the board</small>
+            </article>
+        </section>
+
+        <section>
+            <h3>On Royal itself</h3>
+            <article>
+                <p>at the LINE "S/N D", you see 75- 14</p>
+            <small>click on the image to take you directly to the board</small>
+            </article>
+        </section>
+
+
+        <!-- <h1>Please Check Back Some Few Time</h1> -->
        
         <!-- <p class="facebook" style="color:#ff0000">While you have selected your best choice, don't forget to share with others on the comment section of the<a href=""></a></p> -->
     </main>
