--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -181,6 +181,41 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">sunday 14/1/2024</h2>
+            <article>
+                <h3 class="game">Royal</h3>
+                <p class="winning">69 - 87 - 6 - 22 - 31</p>
+                <p class="machine">77 - 53 - 47 - 39 - 55</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">75 - 84 - 58 - 79 - 13</p>
+                <p class="machine">17 - 64 - 48 - 56 - 65</p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+            <article>
+                <h3 class="game"></h3>
+                <p class="winning"></p>
+                <p class="machine"></p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago results">
             <h2 class="date">saturday 13/1/2024</h2>
             <article>
                 <h3 class="game">Premier King</h3>
@@ -214,41 +249,7 @@
             </article>
         </section>
 
-        <section aria-label="two days ago results">
-            <h2 class="date">friday 12/1/2024</h2>
-            <article>
-                <h3 class="game">Royal</h3>
-                <p class="winning">75 - 14 - 24 - 84 - 78</p>
-                <p class="machine">85 - 74 - 16 - 5 - 86</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">10 - 49 - 18 - 50 - 31</p>
-                <p class="machine">24 - 12 - 14 - 22 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">89 - 40 - 75 - 25 - 83</p>
-                <p class="machine">62 - 20 - 18 - 84 - 66</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">70 - 7 - 61 - 23 - 68</p>
-                <p class="machine">21 - 71 - 19 - 56 - 77</p>        
-            </article>
-            <article>
-                <h3 class="game">Bonanza</h3>
-                <p class="winning">49 - 36 - 24 - 6 - 71</p>
-                <p class="machine">73 - 79 - 19 - 8 - 56</p>        
-            </article>
-            <article>
-                <h3 class="game">vag</h3>
-                <p class="winning">61 - 54 - 3 - 84 - 8</p>
-                <p class="machine">42 - 85 - 38 - 87 - 43</p>        
-            </article>
-        </section>
-
-        
+            
 
 
     </div>
