--- a/plan.html
+++ b/plan.html
@@ -23,6 +23,8 @@
         /></noscript>
         <!-- End Meta Pixel Code -->
 
+
+    <link rel="canonical" href="https://vlb.hologutibusinesscentre.com/plan">
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -196,21 +198,22 @@
     </header>
     <main>
         <h2>Welcome to Plan Page</h2>
-        <p>Let's quickly look at some game plans available on Premier Royal. Don't forget this game closes at 9:30am - Sunday 14/01/2024</p>
-        <p>We will look across Enugu, TOTA, Diamomd, Bonanza and on Royal itself.The best way to reference each game line is usin the `S/N`. Let's go!</p>
+        <p>Let's look at this second time plan on DIAMOND together</p>
 
         <section>
-            <h3>On Enugu</h3>
+            <h3>Diamond</h3>
             <article>
-                <p>at the LINE "S/N 22", along the line it played 75-78-5</p>
-                <a href="/GAMES/3Enugu.html">
-                    <img src="https://i.postimg.cc/kGZF15HN/Screenshot-2024-01-14-050704.png">
+                <p></p>
+                <a href="/GAMES/6Diamond.html">
+                    <img src="https://i.postimg.cc/Y0DpmTys/Screenshot-2024-01-14-131933.png">
                 </a>
                 <small>click on the image to take you directly to the board</small>
             </article>
         </section>
 
-        <section>
+        <p>What do you see from the plan? kindly drop it on the facebook <a href="https://www.facebook.com/visuaLottoBoard/posts/pfbid0qHYakBfSShTMaMPJKB6rxsk6okoDrT9zPWpPhJPP5yFZXFczZYBSd5kuwRLFSqbGl">comment section</a></p>
+
+        <!-- <section>
             <h3>On TOTA</h3>
             <article>
                 <p>at the LINE "S/N 8", along the line it played 14 24</p>
@@ -250,7 +253,7 @@
                 <p>at the LINE "S/N D", you see 75- 14</p>
             <small>click on the image to take you directly to the board</small>
             </article>
-        </section>
+        </section> -->
 
 
         <!-- <h1>Please Check Back Some Few Time</h1> -->
