--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -193,24 +193,24 @@
                 <p class="machine">17 - 64 - 48 - 56 - 65</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Enugu</h3>
+                <p class="winning">19 - 59 - 46 - 8 - 1</p>
+                <p class="machine">29 - 38 - 77 - 88 - 90</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Aseda</h3>
+                <p class="winning">50 - 43 - 59 - 12 - 4</p>
+                <p class="machine">63 - 82 - 33 - 56 - 41</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Lucky</h3>
+                <p class="winning">63 - 64 - 43 - 79 - 5</p>
+                <p class="machine">89 - 74 - 76 - 60 - 46</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Tota</h3>
+                <p class="winning">53 - 43 - 11 - 69 - 50</p>
+                <p class="machine">8 - 87 - 32 - 44 - 46</p>        
             </article>
         </section>
 
