--- a/plan.html
+++ b/plan.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PLAN PAGE</title>
 
+    <meta property="og:image" content="https://i.postimg.cc/mgJRmrPV/mobile-2.png">
+    <meta property="og:imahe:alt" content="">
+    <meta  property="og:url" content="https://vlb.hologutibusinesscentre.com/plan">
+
         <!-- Meta Pixel Code -->
     <script>
         !function(f,b,e,v,n,t,s)
@@ -25,7 +29,7 @@
 
 
     <link rel="canonical" href="https://vlb.hologutibusinesscentre.com/plan">
-    
+
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
