--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -181,6 +181,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">monday 15/1/2024</h2>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">76 - 38 - 86 - 16 - 73</p>
+                <p class="machine">59 - 57 - 26 - 10 - 45</p>        
+            </article>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">27 - 32 - 3 - 43 - 24</p>
+                <p class="machine">26 - 36 - 66 - 45 - 87</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">74 - 14 - 87 - 39 - 40</p>
+                <p class="machine">10 - 89 - 38 - 61 - 51</p>        
+            </article>
+            <article>
+                <h3 class="game">Metro</h3>
+                <p class="winning">17 - 75 - 61 - 49 - 73</p>
+                <p class="machine">5 - 6 - 47 - 4 - 2</p>        
+            </article>
+            <article>
+                <h3 class="game">MSP</h3>
+                <p class="winning">22 - 46 - 9 - 57 - 85</p>
+                <p class="machine">66 - 10 - 30 - 18 - 81</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">81 - 38 - 22 - 68 - 30</p>
+                <p class="machine">65 - 88 - 86 - 72 - 64</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago results">
             <h2 class="date">sunday 14/1/2024</h2>
             <article>
                 <h3 class="game">Royal</h3>
@@ -215,39 +249,7 @@
         </section>
 
 
-        <section aria-label="two days ago results">
-            <h2 class="date">saturday 13/1/2024</h2>
-            <article>
-                <h3 class="game">Premier King</h3>
-                <p class="winning">51 - 36 - 43 - 41 - 24</p>
-                <p class="machine">33 - 4 - 58 - 14 - 38</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">34 - 31 - 66 - 76 - 44</p>
-                <p class="machine">28 - 73 - 25 - 63 - 89</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">67 - 15 - 28 - 6 - 10</p>
-                <p class="machine">74 - 32 - 1 - 78 - 82</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">26 - 21 - 77 - 22 - 51</p>
-                <p class="machine">2 - 75 - 5 - 20 - 64</p>        
-            </article>
-            <article>
-                <h3 class="game">National</h3>
-                <p class="winning">13 - 57 - 15 - 67 - 61</p>
-                <p class="machine">65 - 18 - 69 - 46 - 55</p>        
-            </article>
-            <article>
-                <h3 class="game">Fair Chance</h3>
-                <p class="winning">50 - 47 - 17 - 14 - 42</p>
-                <p class="machine">16 - 19 - 88 - 78 - 54</p>        
-            </article>
-        </section>
+            
 
             
 
