--- a/index.html
+++ b/index.html
@@ -93,24 +93,23 @@
             </div>
 
 
-
                         <!-- all games-->
             <section>
                 <div class="iframe-container" id="iframeContainer">
                     <div class="frame" id="frame" tabindex="0"> 
-                        <iframe title="Royal results board" scrolling="no" src="./GAMES/1Royal.html"></iframe>
+                        <iframe title="Royal results board" scrolling="no" src="./GAMES/1Royal.html" tabindex="-1"></iframe>
                     </div> 
                     <div class="frame" tabindex="0"> 
-                        <iframe title="Mark-2 results board" scrolling="no" src="./GAMES/2Mark-II.html"></iframe>
+                        <iframe title="Mark-2 results board" scrolling="no" src="./GAMES/2Mark-II.html" tabindex="-1"></iframe>
                     </div> 
                     <div class="frame" tabindex="0"> 
-                        <iframe title="Enugu results board" scrolling="no" src="./GAMES/3Enugu.html"></iframe>
+                        <iframe title="Enugu results board" scrolling="no" src="./GAMES/3Enugu.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame" tabindex="0"> 
-                        <iframe title="premier lucky results board" scrolling="no" src="./GAMES/4Lucky.html"></iframe>
+                        <iframe title="premier lucky results board" scrolling="no" src="./GAMES/4Lucky.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Tota results board" scrolling="no" src="./GAMES/5Tota.html"></iframe>
+                        <iframe title="Tota results board" scrolling="no" src="./GAMES/5Tota.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
                         <iframe title="Diamond results board" scrolling="no" src="./GAMES/6Diamond.html"></iframe>
@@ -222,7 +221,7 @@
             </div>
         </footer>
 
-        <div class="goggleAd" aria-hidden="true" tabindex="-1">
+        <div class="goggleAd" inert>
             <script src="script.js"></script>
             <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3639147338737274" crossorigin="anonymous"></script>
             <!-- Source -->
