--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -193,24 +193,24 @@
                 <p class="machine">84 - 22 - 25 - 78 - 49</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Jackpot</h3>
+                <p class="winning">13 - 27 - 83 - 38 - 58</p>
+                <p class="machine">69 - 76 - 47 - 56 - 6</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Club Master</h3>
+                <p class="winning">72 - 52 - 9 - 12 - 41</p>
+                <p class="machine">22 - 89 - 58 - 20 - 50</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">LUCKY-G</h3>
+                <p class="winning">1 - 33 - 54 - 10 - 79</p>
+                <p class="machine">89 - 50 - 65 - 77 - 15</p>        
             </article>
             <article>
-                <h3 class="game"></h3>
-                <p class="winning"></p>
-                <p class="machine"></p>        
+                <h3 class="game">Super</h3>
+                <p class="winning">76 - 89 - 78 - 8 - 18</p>
+                <p class="machine">54 - 66 - 7 - 68 - 33</p>        
             </article>
         </section>
 
