add plan for Lucky

--- a/index.html
+++ b/index.html
@@ -108,44 +108,44 @@
                     <div class="frame" tabindex="0"> 
                         <iframe title="premier lucky results board" scrolling="no" src="./GAMES/4Lucky.html" tabindex="-1"></iframe>
                     </div>
-                    <div class="frame">
+                    <div class="frame" class="frame" tabindex="0">
                         <iframe title="Tota results board" scrolling="no" src="./GAMES/5Tota.html" tabindex="-1"></iframe>
                     </div>
-                    <div class="frame">
-                        <iframe title="Diamond results board" scrolling="no" src="./GAMES/6Diamond.html"></iframe>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="Diamond results board" scrolling="no" src="./GAMES/6Diamond.html" tabindex="-1"></iframe>
+                    </div>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="People results board" scrolling="no" src="./GAMES/7People.html" tabindex="-1"></iframe>
+                    </div>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="Bingo results board" scrolling="no" src="./GAMES/8Bingo.html" tabindex="-1"></iframe>
+                    </div>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="Metro results board" scrolling="no" src="./GAMES/9Metro.html" tabindex="-1"></iframe>
+                    </div>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="International results board" scrolling="no" src="./GAMES/10Inter.html" tabindex="-1"></iframe>
+                    </div>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="premier Gold results board" scrolling="no" src="./GAMES/11Gold.html" tabindex="-1"></iframe>
+                    </div>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="o6 results board" scrolling="no" src="./GAMES/12O6.html" tabindex="-1"></iframe>
+                    </div>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="Jackpot results board" scrolling="no" src="./GAMES/13Jackpot.html" tabindex="-1"></iframe>
+                    </div>
+                    <div class="frame" class="frame" tabindex="0">
+                        <iframe title="Club Master results board" scrolling="no" src="./GAMES/14Club-m.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="People results board" scrolling="no" src="./GAMES/7People.html"></iframe>
+                        <iframe title="Super results board" scrolling="no" src="./GAMES/15Super.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Bingo results board" scrolling="no" src="./GAMES/8Bingo.html"></iframe>
+                        <iframe title="Vag results board" scrolling="no" src="./GAMES/16Vag.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
-                        <iframe title="Metro results board" scrolling="no" src="./GAMES/9Metro.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="International results board" scrolling="no" src="./GAMES/10Inter.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="premier Gold results board" scrolling="no" src="./GAMES/11Gold.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="o6 results board" scrolling="no" src="./GAMES/12O6.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Jackpot results board" scrolling="no" src="./GAMES/13Jackpot.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Club Master results board" scrolling="no" src="./GAMES/14Club-m.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Super results board" scrolling="no" src="./GAMES/15Super.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Vag results board" scrolling="no" src="./GAMES/16Vag.html"></iframe>
-                    </div>
-                    <div class="frame">
-                        <iframe title="Fair Chance results board" scrolling="no" src="./GAMES/17Fair-c.html"></iframe>
+                        <iframe title="Fair Chance results board" scrolling="no" src="./GAMES/17Fair-c.html" tabindex="-1"></iframe>
                     </div>
                     <div class="frame">
                         <iframe title="Aseda results board" scrolling="no" src="./GAMES/18Aseda.html"></iframe>
