--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -181,6 +181,40 @@
     </header>
     <div class="gameResults">
         <section aria-label="yesterday result">
+            <h2 class="date">wednesday 17/1/2024</h2>
+            <article>
+                <h3 class="game">Tota</h3>
+                <p class="winning">39 - 45 - 35 - 77 - 25</p>
+                <p class="machine">49 - 24 - 51 - 17 - 86</p>        
+            </article>
+            <article>
+                <h3 class="game">mark ii</h3>
+                <p class="winning">9 - 59 - 79 - 8 - 2</p>
+                <p class="machine">57 - 73 - 22 - 84 - 3</p>        
+            </article>
+            <article>
+                <h3 class="game">vag</h3>
+                <p class="winning">2 - 3 - 67 - 21 - 41</p>
+                <p class="machine">10 - 89 - 87 - 52 - 90</p>        
+            </article>
+            <article>
+                <h3 class="game">Enugu</h3>
+                <p class="winning">30 - 31 - 18 - 27 - 5</p>
+                <p class="machine">12 - 53 - 61 - 74 - 38</p>        
+            </article>
+            <article>
+                <h3 class="game">Midweek</h3>
+                <p class="winning">44 - 78 - 11 - 21 - 80</p>
+                <p class="machine">69 - 87 - 61 - 73 - 37</p>        
+            </article>
+            <article>
+                <h3 class="game">LUCKY</h3>
+                <p class="winning">30 - 86 - 69 - 47 - 58</p>
+                <p class="machine">82 - 34 - 27 - 23 - 72</p>        
+            </article>
+        </section>
+
+        <section aria-label="two days ago result">
             <h2 class="date">tuesday 16/1/2024</h2>
             <article>
                 <h3 class="game">Gold</h3>
@@ -214,39 +248,7 @@
             </article>
         </section>
 
-        <section aria-label="two days ago result">
-            <h2 class="date">monday 15/1/2024</h2>
-            <article>
-                <h3 class="game">Diamond</h3>
-                <p class="winning">76 - 38 - 86 - 16 - 73</p>
-                <p class="machine">59 - 57 - 26 - 10 - 45</p>        
-            </article>
-            <article>
-                <h3 class="game">People</h3>
-                <p class="winning">27 - 32 - 3 - 43 - 24</p>
-                <p class="machine">26 - 36 - 66 - 45 - 87</p>        
-            </article>
-            <article>
-                <h3 class="game">Bingo</h3>
-                <p class="winning">74 - 14 - 87 - 39 - 40</p>
-                <p class="machine">10 - 89 - 38 - 61 - 51</p>        
-            </article>
-            <article>
-                <h3 class="game">Metro</h3>
-                <p class="winning">17 - 75 - 61 - 49 - 73</p>
-                <p class="machine">5 - 6 - 47 - 4 - 2</p>        
-            </article>
-            <article>
-                <h3 class="game">MSP</h3>
-                <p class="winning">22 - 46 - 9 - 57 - 85</p>
-                <p class="machine">66 - 10 - 30 - 18 - 81</p>        
-            </article>
-            <article>
-                <h3 class="game">International</h3>
-                <p class="winning">81 - 38 - 22 - 68 - 30</p>
-                <p class="machine">65 - 88 - 86 - 72 - 64</p>        
-            </article>
-        </section>
+            
 
     </div>
     
