--- a/GAMES/dailyResult.html
+++ b/GAMES/dailyResult.html
@@ -180,7 +180,43 @@
         </nav>
     </header>
     <div class="gameResults">
+
         <section aria-label="yesterday result">
+            <h2 class="date">thursday 18/1/2024</h2>
+            <article>
+                <h3 class="game">People</h3>
+                <p class="winning">58 - 22 - 15 - 87 - 82</p>
+                <p class="machine">69 - 5 - 21 - 60 - 4</p>        
+            </article>
+            <article>
+                <h3 class="game">Fair Chance</h3>
+                <p class="winning">61 - 29 - 77 - 82 - 3</p>
+                <p class="machine">67 - 2 - 47 - 72 - 66</p>        
+            </article>
+            <article>
+                <h3 class="game">Diamond</h3>
+                <p class="winning">71 - 50 - 17 - 54 - 82</p>
+                <p class="machine">40 - 11 - 24 - 44 - 68</p>        
+            </article>
+            <article>
+                <h3 class="game">International</h3>
+                <p class="winning">69 - 88 - 78 - 19 - 3</p>
+                <p class="machine">14 - 1 - 89 - 67 - 83</p>        
+            </article>
+            <article>
+                <h3 class="game">Fortune</h3>
+                <p class="winning">23 - 28 - 30 - 17 - 26</p>
+                <p class="machine">88 - 77 - 55 - 90 - 22</p>        
+            </article>
+            <article>
+                <h3 class="game">Bingo</h3>
+                <p class="winning">18 - 52 - 42 - 79 - 27</p>
+                <p class="machine">20 - 47 - 43 - 21 - 1</p>        
+            </article>
+        </section>
+
+
+        <section aria-label="two days ago result">
             <h2 class="date">wednesday 17/1/2024</h2>
             <article>
                 <h3 class="game">Tota</h3>
@@ -214,39 +250,7 @@
             </article>
         </section>
 
-        <section aria-label="two days ago result">
-            <h2 class="date">tuesday 16/1/2024</h2>
-            <article>
-                <h3 class="game">Gold</h3>
-                <p class="winning">43 - 15 - 18 - 45 - 49</p>
-                <p class="machine">84 - 82 - 37 - 5 - 33</p>        
-            </article>
-            <article>
-                <h3 class="game">06</h3>
-                <p class="winning">71 - 68 - 9 - 75 - 19</p>
-                <p class="machine">84 - 22 - 25 - 78 - 49</p>        
-            </article>
-            <article>
-                <h3 class="game">Jackpot</h3>
-                <p class="winning">13 - 27 - 83 - 38 - 58</p>
-                <p class="machine">69 - 76 - 47 - 56 - 6</p>        
-            </article>
-            <article>
-                <h3 class="game">Club Master</h3>
-                <p class="winning">72 - 52 - 9 - 12 - 41</p>
-                <p class="machine">22 - 89 - 58 - 20 - 50</p>        
-            </article>
-            <article>
-                <h3 class="game">LUCKY-G</h3>
-                <p class="winning">1 - 33 - 54 - 10 - 79</p>
-                <p class="machine">89 - 50 - 65 - 77 - 15</p>        
-            </article>
-            <article>
-                <h3 class="game">Super</h3>
-                <p class="winning">76 - 89 - 78 - 8 - 18</p>
-                <p class="machine">54 - 66 - 7 - 68 - 33</p>        
-            </article>
-        </section>
+           
 
             
 
